CHERNOBYL NUCLEAR POWER STATION IS CURRENTLY 1.3179990355642466% SAFE

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>CHERNOBYL PROGRESS BAR</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="radiation.png">
     <style>
       body, a {
         color: #E8BF28;
@@ -30,7 +31,7 @@
 
     <h1 id="percent"></h1>
 
-    <p>It'll take Chernobyl Nuclear Power Station 3&#8239;000 years to be safe again. Inspired by <a href="https://twitter.com/chernobylstatus">@chernobylstatus</a> and <a href="https://hugovk.github.io/year-progress-bar/">year progress bar</a>.
+    <p>It'll take Chernobyl Nuclear Power Station 3&#8239;000 years to be safe again. Inspired by <a href="https://xcancel.com/chernobylstatus">@chernobylstatus</a> and <a href="https://hugovk.github.io/year-progress-bar/">year progress bar</a>.
 
     <script src="progressbar.min.js"></script>
 
